--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,22 @@
 body {
   background-color: #282c34;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  height: 100%;
+  margin: 0;
+  overflow: hidden;
+}
+
+.content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-  height: 100vh;
+  height: 100%;
+}
+
+.main-title {
+  color: yellow;
+  text-align: center;
 }
 
 .row {
@@ -87,3 +97,34 @@ body {
   transition: transform 1s;
 }
 
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 150px;
+  color: beige;
+  text-align: center;
+}
+
+.restart-button {
+  width: 200px;
+  height: 50px;
+  font-size: large;
+  margin-top: 60px;
+  color: white;
+  background-color: rgb(62, 144, 199);
+  cursor: pointer;
+}
+
+.restart-button:hover {
+  background-color: aquamarine;
+  color: black;
+}
+
+.footer-content {
+  padding: 22px;
+}
+
+.congrats {
+  color: royalblue;
+}
